# momi3

./: .coveragerc  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/momi3/: Data.py  Experimental.py  JAX_functions.py  MOMI.py  Params.py  __init__.py  common.py  event.py  event_tree.py  kronprod.py  lineage_sampler.py  math_functions.py  migration.py  momints.py  optimizers.py  sfs_stats.py  skeleton.py  spexpm.py  surviving_lineage_samplers.py  utils.py
src/momi3/events/: __init__.py  admix.py  downsample.py  event.py  lift.py  split1.py  split2.py
src/momi3/lemmas/: admix.py  downsample.py  lift.py  split1.py  split2.py
tests/: conftest.py  demos.py  test_8_pop_momi2_time.py  test_bound_sampler.py  test_gradients.py  test_jacobson.py  test_kronprod.py  test_loglik.py  test_migration.py  test_momi.py  test_momi_funs.py  test_momints.py  test_rate_0.py  test_skeleton.py  test_spexpm.py  test_time.py  test_vs_moments_momi2.py  time.py
tests/out_files/: .smbdeleteAAA58bcd4a86  TwoDemes.npz  TwoDemes.pickle
tests/yaml_files/: 3_pop_mig.yaml  5_pop_2_admix.yaml  8_pop_3_admix.yaml  IWM.yml  IWMA.yml  TwoDemes.yml  arc5_pulse_inferred.yaml  jacobson.yml  jacobson_4_pop.yml  jacobson_5_pop.yml
