[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "momi3"
dynamic = ["version"]
description = "momi3 infers complex demographic history from the joint site frequency spectrum"
authors = [
    {name = "Enes Dilber", email = "enes@umich.edu"},
    {name = "Jonathan Terhorst", email = "jonth@umich.edu"},
]
dependencies = [
    "cvxpy>=1.4.2",
    "demes>=0.2.3",
    "demesdraw>=0.4.0",
    "diffrax>=0.5",
    "frozendict>=2.0.2",
    "gmpy2>=2.1.5",
    "jax>=0.4.26",
    "jaxlib>=0.4.4",
    "jaxopt>=0.8.3",
    "joblib>=1.4.0",
    "msprime>=1.2.0",
    "networkx>=3.0",
    "numpy>=1.23.0",
    "opt_einsum>=3.3.0",
    "optax>=0.1.5",
    "pandas>=2.2.2",
    "scipy>=1.11.4",
    "sparse>=0.15.1",
    "sympy>=1.11.1",
    "tqdm>=4.66.2",
    "platformdirs>=4.2.0",
]
requires-python = ">=3.10"
readme = "README.rst"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/jthlab/momi3/"

[project.optional-dependencies]
gpu = [
    "jax[cuda12_pip]>=0.4.26",
]
[tool.isort]
profile = "black"
known_first_party = "momi3"

[tool.pdm]
distribution = true
package-dir = "src"

[tool.pdm.version]
source = "scm"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"

[tool.pdm.dev-dependencies]
testing = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "moments @ git+https://bitbucket.org/simongravel/moments/src/main/@moments-1.1.14",
    "momi==2.1.20",
    "numpy>=1.26.4",
    "dadi>=2.3.3",
]
dev = [
    "ipython>=8.23.0",
]

[[tool.pdm.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
type = "find_links"
verify_ssl = true

[[tool.pdm.source]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com"
verify_ssl = true
